--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Bungee+Inline' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+
+
+    <!-- <link href="https://fonts.googleapis.com/css?family=UnifrakturCook:700" rel="stylesheet"> -->
   <style>
     body {
       margin: 10px;
@@ -43,13 +46,13 @@
 
     .size {
       position: absolute;
-      bottom: -0.25em;
-      right: -1em;
+      bottom: -0.4em;
+      left: 0.5em;
       font-size: 1.1em;
     }
 
     .beer h1 {
-      color: #fc5;
+
       color: #eee;
       margin: 0;
       font-size: 3em;
@@ -71,6 +74,7 @@
     window.beers = [{
       title: 'Guava Gold',
       style: 'Fruited Blonde',
+      titleColor: '#fc5',
       price: 6,
       size: '12oz',
       price12: 5,
@@ -79,16 +83,19 @@
       price64: 19
     },{
       title: 'Pineapple Hopline Bling',
+      titleColor: '#ff5',
       style: 'IPA',
       price: 7,
       size: '16oz'
     },{
       title: 'G-Street',
+      titleColor: '#ffc',
       style: 'American Blonde',
       price: 6,
       size: '12oz'
     },{
       title: 'Advanced Darkness',
+      titleColor: '#e4a',
       style: 'Porter',
       price: 8,
       size: '6oz'
@@ -121,13 +128,17 @@
 
     const getTemplate = () => document.getElementById('beer-template').content.cloneNode(true)
 
-    const fill = template => (query, value) => template.querySelector(query).innerText = value || ''
+    const fill = template => (query, value, color) => {
+      const el = template.querySelector(query)
+      el.innerText = value || ''
+      if (color) el.style.color = color
+    }
 
     const renderTemplate = beer => {
       const tmpl = getTemplate()
       const templateFill = fill(tmpl)
 
-      templateFill('h1', beer.title)
+      templateFill('h1', beer.title, beer.titleColor)
       templateFill('h2', beer.style)
       templateFill('.price', beer.price)
       templateFill('.size', beer.size)
