--- a/index.html
+++ b/index.html
@@ -19,20 +19,26 @@
       grid-template-columns: repeat(2, 1fr);
       grid-gap: 10px;
       color: #444;
-      font-size: 2vh;
+      font-size: 1.7vh;
     }
 
     .beer {
       color: #fff;
-      padding: 20px;
       padding-left: 5em;
       position: relative;
     }
 
     .price-wrapper {
       position: absolute;
-      top: 3.8em;
-      left: 0.9em;
+      top: 2.5em;
+      left: 1.4em;
+      color: #fff;
+
+/*       
+      border-radius: 50%;
+      background: #631;
+      border: 1px solid #fff;
+      padding: 0.5em; */
     }
 
     .price {
@@ -49,10 +55,18 @@
       bottom: -0.4em;
       left: 0.5em;
       font-size: 1.1em;
+      font-weight: bold;
+      color: white;
+    }
+
+    img.beer-glass {
+      position: absolute;
+      top: 0em;
+      left: 0em;
+      height: 5em;
     }
 
     .beer h1 {
-
       color: #eee;
       margin: 0;
       font-size: 3em;
@@ -61,12 +75,28 @@
     }
 
     .beer h2 {
-
       font-family: 'Bungee Inline', cursive;
       color: #eee;
       margin: 0;
       font-size: 1.5em;
       font-weight: normal;
+    }
+
+    img.main-logo {
+      position: fixed;
+      bottom: 1em;
+      left: 1em;
+      height: 15vh;
+    }
+
+    .assorted-price-wrapper {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+    }
+
+    .assorted-price {
+      display: inline;
     }
   </style>
 
@@ -77,28 +107,40 @@
       titleColor: '#fc5',
       price: 6,
       size: '12oz',
-      price12: 5,
-      price16: 6,
-      price32: 12,
-      price64: 19
+      priceSmall: 5,
+      priceNormal: 6,
+      priceCrowler: 12,
+      priceGrowler: 19
     },{
       title: 'Pineapple Hopline Bling',
       titleColor: '#ff5',
       style: 'IPA',
       price: 7,
-      size: '16oz'
+      size: '16oz',
+      priceSmall: 5,
+      priceNormal: 6,
+      priceCrowler: 12,
+      priceGrowler: 19
     },{
       title: 'G-Street',
       titleColor: '#ffc',
       style: 'American Blonde',
       price: 6,
-      size: '12oz'
+      size: '12oz',
+      priceSmall: 5,
+      priceNormal: 6,
+      priceCrowler: 12,
+      priceGrowler: 19
     },{
       title: 'Advanced Darkness',
       titleColor: '#e4a',
       style: 'Porter',
       price: 8,
-      size: '6oz'
+      size: '6oz',
+      priceSmall: 5,
+      priceNormal: 6,
+      priceCrowler: 12,
+      priceGrowler: 19
     }]
 
   </script>
@@ -109,12 +151,19 @@
 
   <template id="beer-template">
     <div class="beer">
+      <img class='beer-glass beer-glass-pint' src="img/pint.svg" />
       <h1></h1>
       <h2></h2>
       <div class="price-wrapper">
-        <span class="price"></span>
-        <span class="size"></span>
-    </div>
+        <div class="price"></div>
+        <div class="size"></div>
+      </div>
+      <div class="assorted-price-wrapper">
+          <div class="assorted-price price-small"></div>
+          <div class="assorted-price price-normal"></div>
+          <div class="assorted-price price-crowler"></div>
+          <div class="assorted-price price-growler"></div>
+      </div>
     </div>
   </template>
 
@@ -122,6 +171,8 @@
   <div id="wrapper" class="wrapper">
 
   </div>
+
+  <img class='main-logo' src="img/logo.svg" />
 
   <script>
     const wrapper = document.getElementById("wrapper");
@@ -142,6 +193,11 @@
       templateFill('h2', beer.style)
       templateFill('.price', beer.price)
       templateFill('.size', beer.size)
+
+      templateFill('.price-small', beer.priceSmall)
+      templateFill('.price-normal', beer.priceNormal)
+      templateFill('.price-crowler', beer.priceCrowler)
+      templateFill('.price-growler', beer.priceGrowler)
 
       wrapper.appendChild(tmpl)
     }
