--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- <link href="https://fonts.googleapis.com/css?family=UnifrakturCook:700" rel="stylesheet"> -->
   <style>
     body {
-      margin: 10px;
-      background: #222;
+      margin: 30px;
+      background: #000;
       font-family: 'Quicksand', sans-serif;
     }
 
@@ -24,30 +24,43 @@
 
     .beer {
       color: #fff;
-      padding-left: 5em;
+      padding-left: 6em;
       position: relative;
     }
 
     .price-wrapper {
       position: absolute;
       top: 2.5em;
-      left: 1.4em;
+      left: -0.25em;
       color: #fff;
 
-/*       
+
+      width: 2em;
+      height: 2em;
+      padding: 0.3em;
       border-radius: 50%;
-      background: #631;
-      border: 1px solid #fff;
-      padding: 0.5em; */
+      background: #000;
+      border: 2px solid #fff;
+
+
+      /*
+
+      text-align: center;
+      margin-top: 0.2em;*/
     }
 
     .price {
+      position: absolute;
+      top: 0.1em;
+      left: 0.25em;
       font-family: 'Shrikhand', cursive;
-      font-size: 1.8em;
+      font-size: 1.5em;
     }
 
     .price::before {
       content: '$';
+      font-family: 'Quicksand', sans-serif;
+      font-size: 0.8em;
     }
 
     .size {
@@ -61,8 +74,8 @@
 
     img.beer-glass {
       position: absolute;
-      top: 0em;
-      left: 0em;
+      top: 0.5em;
+      left: 1.2em;
       height: 5em;
     }
 
@@ -75,7 +88,8 @@
     }
 
     .beer h2 {
-      font-family: 'Bungee Inline', cursive;
+      /* font-family: 'Bungee Inline', cursive;
+      font-family: 'Shrikhand', cursive; */
       color: #eee;
       margin: 0;
       font-size: 1.5em;
@@ -151,7 +165,7 @@
 
   <template id="beer-template">
     <div class="beer">
-      <img class='beer-glass beer-glass-pint' src="img/pint.svg" />
+      <img class='beer-glass beer-glass-pint' src="img/test.svg" />
       <h1></h1>
       <h2></h2>
       <div class="price-wrapper">
@@ -171,6 +185,8 @@
   <div id="wrapper" class="wrapper">
 
   </div>
+
+  <object id="dynamic-svg" type="image/svg+xml" data="img/test.svg"></object>
 
   <img class='main-logo' src="img/logo.svg" />
 
@@ -192,17 +208,45 @@
       templateFill('h1', beer.title, beer.titleColor)
       templateFill('h2', beer.style)
       templateFill('.price', beer.price)
-      templateFill('.size', beer.size)
+      //templateFill('.size', beer.size)
 
-      templateFill('.price-small', beer.priceSmall)
-      templateFill('.price-normal', beer.priceNormal)
-      templateFill('.price-crowler', beer.priceCrowler)
-      templateFill('.price-growler', beer.priceGrowler)
+      // templateFill('.price-small', beer.priceSmall)
+      // templateFill('.price-normal', beer.priceNormal)
+      // templateFill('.price-crowler', beer.priceCrowler)
+      // templateFill('.price-growler', beer.priceGrowler)
 
       wrapper.appendChild(tmpl)
     }
     window.beers.forEach(renderTemplate);
 
+
+
+/*
+    var svgHolder = document.querySelector('object');
+
+    const css = `
+<style type="text/css">
+  <![CDATA[
+    .beer-dark {
+      stop-color:#ff6500;
+    }
+    .beer-light {
+      stop-color:#fff800;
+    }
+  ]]>
+</style>`
+
+    svgHolder.onload = function () {
+        var svgDocument = svgHolder.contentDocument;
+        var style = svgDocument.createElementNS("http://www.w3.org/2000/svg", "style");
+
+        // Now (ab)use the @import directive to load make the browser load our css
+        style.textContent = css;
+
+        var svgElem = svgDocument.querySelector('svg');
+        svgElem.insertBefore(style, svgElem.firstChild);
+    };
+*/
   </script>
 </body>
 </html>
