--- a/index.html
+++ b/index.html
@@ -5,21 +5,15 @@
     <link href='https://fonts.googleapis.com/css?family=Bungee+Inline' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
+    <link href="index.css" rel="stylesheet" type="text/css" />
+
     <script type="module" src="src/colorPintGlass.js"></script>
     <script type="module" src="src/beerData.js"></script>
-
-    <!-- <link href="https://fonts.googleapis.com/css?family=UnifrakturCook:700" rel="stylesheet"> -->
-    <link href="index.css" rel="stylesheet" type="text/css" />
-  
-
 </head>
 <body>
-
-
   <template id="beer-template">
     <div class="beer">
-      <!-- <img class='beer-glass beer-glass-pint' src="img/test.svg" /> -->
-      <object class="pint-glass-icon" type="image/svg+xml" data="img/test.svg"></object> 
+      <object class="pint-glass-icon" type="image/svg+xml" data="img/pint.svg"></object> 
       <h1></h1>
       <h2></h2>
       <div class="price-wrapper">
@@ -35,16 +29,9 @@
     </div>
   </template>
 
-
-  <div id="wrapper" class="wrapper">
-
-  </div>
+  <div id="wrapper" class="wrapper"></div>
 
   <img class='main-logo' src="img/logo.svg" />
-
-  
-
-
   <script type="module" src="src/index.js"></script>
 </body>
 </html>
