--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Bungee+Inline' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 
-    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="index.css?v=1" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <template id="beer-template">
