--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Bungee+Inline' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700" rel="stylesheet">
 
     <link href="index.css?v=1" rel="stylesheet" type="text/css" />
 </head>
