--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
   <div class="flights">
 
-      <p class="catch-line">Can’t decide on just one?</p>
-      <p>We have flights of 4 beers &ndash; <b>6oz each</b>!</p>
+      <p class="catch-line"><b>Can’t decide on just one?</b></p>
+      <p>Try a flight of any 4 beers &ndash; <b>6oz each</b>!</p>
 
       <object class="glass-icon glass-icon-1" type="image/svg+xml" data="img/6oz.svg"></object>
       <object class="glass-icon glass-icon-2" type="image/svg+xml" data="img/6oz.svg"></object>
@@ -59,9 +59,9 @@
   </div>
 
   <div class="taproom-notes">
-    <div>We have guest <b>ciders</b> available for $6</div>
-    <div>We also offer <b>red and white</b> wine on tap for $8</div>
-    <div>Happy Hour (Tues-Fri: 4pm to 6pm) $1 off all GrassLands pints!</div>
+    <div><b>Ciderboys Ciders</b> available for $6 each</div>
+    <div><b>Red and White</b> wine on tap for $8 each</div>
+      <div><b>Happy Hour</b> (Tues-Fri: 4pm to 6pm) <b>$1 off all GrassLands pints!</b></div>
   </div>
 
   <script type="module" src="src/index.js"></script>
