--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
       <object class="glass-icon glass-icon-3" type="image/svg+xml" data="img/6oz.svg"></object>
       <object class="glass-icon glass-icon-4" type="image/svg+xml" data="img/6oz.svg"></object>
       <div class="price-wrapper">
-        <div class="price">12</div>
+        <div class="price">8</div>
       </div>
   </div>
 
   <div class="taproom-notes">
     <div><b>Ciderboys Ciders</b> available for $6 each</div>
-    <div><b>Red and White</b> wine on tap for $8 each</div>
+    <div><b>Red and White</b> wine for $8 each</div>
       <div><b>Happy Hour</b> (Tues-Fri: 4pm to 6pm) <b>$1 off all GrassLands pints!</b></div>
   </div>
 
